layout: fixed overflow when viewing pos fullscreen

--- a/components/home/styles/Home.module.css
+++ b/components/home/styles/Home.module.css
@@ -4,6 +4,7 @@
     width: 100vw;
     height: 100vh;
     /* align-items: center; */
+    overflow-y: auto;
     grid-template-rows: auto 1fr auto;
 }
 
